# crous-accommodation-notifier

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.MD  accommodation_parser.py  main.py  models.py  notification_builder.py  pyproject.toml  requirements.txt  settings.py  telegram_notifier.py
src/: accommodation_parser.py  authenticator.py  models.py  notification_builder.py  parser.py  settings.py  telegram_notifier.py
tests/: test_card_parser.py
